@@ -1,5 +1,10 @@
 2017-02-15  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c++/79301
+	* parser.c (cp_parser_std_attribute): Don't pedwarn about
+	[[deprecated]] with -std=c++11 and [[fallthrough]] with
+	-std=c++11 and -std=c++14.
+
 	PR c++/79288
 	* decl.c (grokdeclarator): For static data members, handle thread_p
 	only after handling inline.
